--- a/application.yml
+++ b/application.yml
@@ -14,9 +14,9 @@ spring:
   datasource:
 #    url: jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DATABASE}
 #    url: jdbc:mysql://127.0.0.1:${MYSQL_PORT}/${MYSQL_DATABASE}
-#    url: jdbc:mysql://mysqldb:${MYSQL_PORT}/${MYSQL_DATABASE}
+    url: jdbc:mysql://mysqldb:${MYSQL_PORT}/${MYSQL_DATABASE}
 #    url: jdbc:mysql://172.29.182.103:${MYSQL_PORT}/${MYSQL_DATABASE}
-    url: jdbc:mysql://172.21.0.2:${MYSQL_PORT}/${MYSQL_DATABASE}
+#    url: jdbc:mysql://172.21.0.2:${MYSQL_PORT}/${MYSQL_DATABASE}
     password: ${MYSQL_PASSWORD}
     username: ${MYSQL_USERNAME}
   jpa:
@@ -24,10 +24,10 @@ spring:
     generate-ddl: true
     show-sql: true
     hibernate:
-       ddl-auto: update # Hibernate will generate the necessary SQL to create new tables, sequences, etc,
+      # ddl-auto: update # Hibernate will generate the necessary SQL to create new tables, sequences, etc,
       # but also update existing schema to match the entities in your project.
-      #ddl-auto: validate # Hibernate will validate that the tables and columns exist and match the entity mappings.
-      #ddl-auto: none # Hibernate will not perform any action on the database schema.
+      # ddl-auto: validate # Hibernate will validate that the tables and columns exist and match the entity mappings.
+      ddl-auto: none # Hibernate will not perform any action on the database schema.
     properties:
       hibernate:
         globally_quoted_indentifiers: true
@@ -41,8 +41,8 @@ spring:
   sql:
     init:
       # turn this on when making changes to the database
-      mode: always # Always initialize the database with the SQL scripts
-      #mode: never # Never initialize the database with the SQL scripts
+      #mode: always # Always initialize the database with the SQL scripts
+      mode: never # Never initialize the database with the SQL scripts
       #mode: embedded # Initialize the database with the SQL scripts only if the database is embedded
       continue-on-error: false
 
